--- a/_includes/analytics-providers/custom.html
+++ b/_includes/analytics-providers/custom.html
@@ -1,3 +1,10 @@
 <!-- start custom analytics snippet -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-M5BXYPXER2"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-M5BXYPXER2');
+</script>
 <!-- end custom analytics snippet -->
